# madios

./: .clang-format  .gitignore  BasicSymbol.h  CLI_MODERNIZATION_CHECKLIST.md  CLI_MODERNIZATION_ORDER.md  CMakeLists.txt  CONTRIBUTING.md  EquivalenceClass.h  License.txt  MIGRATION_STEP_LOG.md  Makefile  ModifiedADIOS  ModifiedADIOS.pro  PCFG_OUTPUT_DEBUG_CHECKLIST.md  PCFG_OUTPUT_LLM_CONTEXT.md  RDSGraph.cpp  RDSGraph.cpp.OLD  RDSGraphDeleteme.cpp  RDSNode.cpp  RDSNode.h  README  README.md  REFORM_CHECKLIST.md  REFORM_PLAN.md  SearchPath.cpp  SearchPath.h  SpecialLexicons.cpp  TESTING.md  build_and_install.sh  clean_build_and_test.sh  fix_variable_names.sh  run_all_tests.sh  test_trimspaces_minimal.cpp
LLM_DOCS/: CLI_MODERNIZATION_CHECKLIST.md  LLM_MIGRATION_CONTEXT.md  migrate_source_file.sh
background/: ADIOS Grammar Induction Params.md
deleteme/: RDSGraph.cpp  hello_test  test_trimspaces_minimal
docs/: algorithm_overview.md
include/: logging.h
include/madios/: ADIOSUtils.h  BasicSymbol.h  EquivalenceClass.h  LexiconUnit.h  Logger.h  ParseTree.h  RDSGraph.h  RDSNode.h  SearchPath.h  SignificantPattern.h  SpecialLexicons.h  TimeFuncs.h  json.hpp  version.h
include/madios/maths/: special.h
include/madios/maths/tnt/: jama_chol.h
include/madios/utils/: MiscUtils.h  Stringable.h  TimeFuncs.h
maths/: special.cpp  special.h
scripts/: gen_baseline_log.sh
src/: BasicSymbol.cpp  EquivalenceClass.cpp  Logger.cpp  RDSGraph.cpp  RDSGraph.h  RDSNode.cpp  RDSNode.h  SearchPath.cpp  SignificantPattern.cpp  SignificantPattern.h  SpecialLexicons.cpp  SpecialLexicons.h  TimeFuncs.cpp  logging.cpp  main.cpp
src/maths/: special.cpp
src/utils/: MiscUtils.cpp  MiscUtils.h  Stringable.cpp  TimeFuncs.cpp
test/: corpus.txt
tests/: actual_output.json  actual_output.txt  actual_output_clean.json  compare_json.py  diff_grammar.py  expected_output.json  expected_output.txt  hello  pcfg_output_test.md  test_basic.cpp  test_cli_pcfg_output.sh  test_core.cpp  test_equiv.cpp  test_error_handling_bad_cli.cpp  test_error_handling_malformed_corpus.cpp  test_exception_safety_rdsgraph.cpp  test_input_plain.cpp  test_integration.cmake  test_logger.cpp  test_pcfg_output.cpp  test_performance_rdsgraph.cpp  test_rdsgraph_clone.cpp  test_rdsgraph_json.cpp  test_special.cpp  test_trimspaces_minimal.cpp  test_trimspaces_standalone.cpp  test_utils.cpp  test_utils_api_coverage.cpp
